# jetstream

./: Cargo.toml  LICENSE.old  Makefile  README.md
benches/: emulator_benchmark.rs  encoder_benchmark.rs  encoding_benchmark.rs
examples/: basic.rs
src/: decoder.rs  encoder.rs  jetstream.rs  lib.rs  test.rs  testcase.rs
src/emulator/: emulator.rs  mod.rs  test.rs
src/encoding/: bitops.rs  mod.rs  simple8b.rs  test.rs
