[package]
name = "jetstream"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]

rand = "0.8.5"
uuid = { version = "1.2.1", features = ["v4"] }
lazy_static = "1.4.0"
flate2 = "1.0.25"
rand_distr = "0.4.3"
log = { version = "0.4.17", features = ["kv_unstable_std"] }

[dev-dependencies]
rasciigraph = "0.1.1"
tabwriter = "1.2.1"
criterion = "0.4"

[[bench]]
name = "encoder_benchmark"
harness = false

[[bench]]
name = "encoding_benchmark"
harness = false

[[bench]]
name = "emulator_benchmark"
harness = false
